[package]
name = "depanalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
exepipe = { path = "../exepipe" }
mpads = { path = "../mpads" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
byteorder = "1.5.0"
revm = { version = "8", features = ["serde"] }

[features]
bloomfilter = []
only_one_bundle = []
U32 = []
U64 = []
U128 = []
reorder = []
aggregate_tx = []
uni_set = []
ignore_weth = []

