[package]
name = "exepipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
mpads = { path = "../mpads" }
revm = { version = "8", features = ["serde"] }
byteorder = "1.5.0"
bincode = "1.3.3"
dashmap = "6.0.0-rc.1"
anyhow = "1.0.86"
serial_test = "3.1.1"
num-traits = "0.2.19"

