[package]
name = "mpads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8.19"
sha2 = "0.10.8"
lazy_static = "1.4.0"
hex = "0.4.3"
rocksdb = "0.22.0"
anyhow = "1.0.86"
byteorder = "1.5.0"
xxhash-rust = { version = "0.8.10", features = ["xxh32", "xxh3"] }
threadpool = "1.8.1"
atomptr = "1.4.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
time = "0.3.36"

[dev-dependencies]
serial_test = "3.1.1"

[features]
check_rec = []
